# journald_viewer

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: build-deb.yml
src/: journald_viewer.cpp  journald_viewer.hpp  main.cpp
tests/: journald  journald.expected  tests.cpp
